@@ -510,6 +510,7 @@ __ZN7WebCore4KURLC1ERKS0_RKNS_6StringE
 __ZN7WebCore4Node17stopIgnoringLeaksEv
 __ZN7WebCore4Node18startIgnoringLeaksEv
 __ZN7WebCore4Node19setNeedsStyleRecalcENS_15StyleChangeTypeE
+__ZN7WebCore4Node10renderRectEPb
 __ZN7WebCore4Page12setGroupNameERKNS_6StringE
 __ZN7WebCore4Page13didStopPluginEPNS_14HaltablePluginE
 __ZN7WebCore4Page14didStartPluginEPNS_14HaltablePluginE
